# pyairtable-compose

./: .coveragerc  .env.all-services  .env.all-services.example  .env.example  .env.example.new  .env.local.backup.20250806_233243  .env.phase1  .env.phase1.example  .env.production.example  .env.security.template  .env.template  .env.working.example  .gitignore  .pre-commit-config.yaml  .security-config.yaml  14_REPOS_PARALLEL_CLEANUP_PLAN.md  ACTUAL_SERVICE_INVENTORY.md  AGENT_10_FINAL_STATUS_REPORT.md  AGENT_6_COMPLETION_REPORT.md  AGILE_WORKFLOW_GUIDE.md  AIRTABLE_BASE_METADATA_REPORT.md  ARCHITECTURAL_DECISION_DOCUMENT.md  ARCHITECTURAL_IMPROVEMENT_ACTION_PLAN.md  ARCHITECTURAL_SOLUTIONS.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_ENHANCEMENT_SUMMARY.md  ARCHITECT_RECOVERY_PLAN.md  AUTHENTICATION_ARCHITECTURE.md  BASIC_MONITORING_DEPLOYMENT_REPORT.md  CLAUDE.md  CLEANUP_ASSESSMENT.md  CLEANUP_SUMMARY.md  CLOUD_ARCHITECTURE_RECOMMENDATIONS.md  COMPREHENSIVE_ARCHITECTURAL_REVIEW.md  COMPREHENSIVE_DEPLOYMENT_VALIDATION_REPORT.md  COMPREHENSIVE_MCP_TEST_REPORT.md  COMPREHENSIVE_SECURITY_ARCHITECTURE_REVIEW.md  COMPREHENSIVE_SECURITY_ASSESSMENT_ROADMAP.md  COMPREHENSIVE_SECURITY_AUDIT_REPORT.md  COMPREHENSIVE_SECURITY_EVALUATION_3VANTAGE.md  (+344 more)
.github/: dependabot.yml  pull_request_template.md
.zap/: rules.tsv
archived-duplicates/: kafka-mirrormaker.properties  pyairtable-dev-dashboard.sh  pyairtable-dev.sh
archived-duplicates/pyairtable-ai-domain/: Dockerfile  Makefile  pyproject.toml
archived-duplicates/pyairtable-ai-domain/src/: __init__.py  main.py
archived-duplicates/pyairtable-ai-domain/src/models/llm/: __init__.py  chat.py
archived-duplicates/pyairtable-ai-domain/src/models/mcp/: __init__.py  tools.py
archived-duplicates/pyairtable-ai-domain/src/routers/: __init__.py  health.py
archived-duplicates/pyairtable-ai-domain/src/services/: __init__.py
archived-duplicates/pyairtable-ai-domain/src/services/llm/: base_provider.py  gemini_provider.py  openai_provider.py
archived-duplicates/pyairtable-ai-domain/src/services/mcp/: tool_executor.py  tool_registry.py
archived-duplicates/pyairtable-ai-domain/src/utils/: redis_client.py
archived-duplicates/pyairtable-ai-domain/tests/: __init__.py
archived-duplicates/pyairtable-ai-domain/tests/unit/: test_health.py
archived-duplicates/pyairtable-airtable-domain/: Makefile  pyproject.toml
archived-duplicates/pyairtable-airtable-domain/src/core/: app.py
archived-duplicates/pyairtable-airtable-domain/src/database/: connection.py
archived-duplicates/pyairtable-airtable-domain/src/middleware/: logging.py
archived-duplicates/pyairtable-airtable-domain/src/models/: workflows.py
archived-duplicates/pyairtable-airtable-domain/src/routers/: __init__.py  automation.py  dashboard.py  health.py  workflows.py
archived-duplicates/pyairtable-airtable-domain/src/services/: airtable_service.py
archived-duplicates/pyairtable-airtable-domain/src/services/business_logic/: calculation_service.py  rule_engine.py  validation_engine.py
archived-duplicates/pyairtable-airtable-domain/src/utils/: redis_client.py  validation.py
archived-duplicates/pyairtable-airtable-domain/tests/unit/: test_validation.py
cleanup-implementation-scripts/: phase1-critical-separation.sh  phase2-service-consolidation.sh  phase3-documentation-migration.sh  phase4-final-optimization.sh
database-decomposition/: migration-scripts.sql
dlq-system/: dlq-processor.js  package-lock.json  package.json
docs/: CENTRAL_EUROPE_DR_STRATEGY.md  CLOUD_ARCHITECTURE_ANALYSIS.md  LOCAL_DEVELOPMENT_GUIDE.md  OBSERVABILITY_FOUNDATION.md  PYTHON_SERVICES_MIGRATION_ANALYSIS.md  TESTING_GUIDE.md  TROUBLESHOOTING_GUIDE.md  autoscaling-architecture-summary.md  autoscaling-operations-runbook.md  cicd-architecture-summary.md  deployment-automation-guide.md  deployment-runbook.md  implementation-plan.md  testing-strategy.md
docs-to-migrate/: AGILE_WORKFLOW_REALITY_CHECK.md  AIRTABLE_BASE_FIX_SUMMARY.md  AI_ENHANCEMENT_ROADMAP.md  AI_IMPLEMENTATION_TASKS.md  AI_QUICK_WINS.md  AUTHENTICATION_OPTIMIZATION_REPORT.md  CLAUDE_MEMORY_SYSTEM.md  CLAUDE_SECURITY_MONITORING_UPDATE.md  CLEANUP_LOG.md  COMPREHENSIVE_ARCHITECT_MEETING_SUMMARY.md  COMPREHENSIVE_E2E_TEST_REPORT.md  COMPREHENSIVE_TESTING_STRATEGY.md  COMPREHENSIVE_TEST_VALIDATION_REPORT.md  COMPREHENSIVE_VALIDATION_REPORT.md  COMPREHENSIVE_WORKFLOW_VALIDATION_REPORT.md  CRITICAL_INFRASTRUCTURE_FAILURE_ANALYSIS.md  DATABASE_SCHEMA_FIX_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TEST_PLAN.md  DEPLOYMENT_VALIDATION_CHECKLIST.md  DOCKER_BUILD_FIXES_REPORT.md  DOCUMENTATION_ALIGNMENT_SUMMARY.md  E2E-TEST-SUITE-IMPLEMENTATION-SUMMARY.md  ENVIRONMENT_SETUP_GUIDE.md  EXECUTE_CLEANUP.md  EXECUTIVE_SUMMARY_AGILE_TRANSFORMATION.md  EXPERT_AGENT_MEETING_NOTES_PYAIRTABLE_PROGRESS_REVIEW.md  EXPERT_MEETING_EXECUTIVE_SUMMARY.md  FINAL_AUTHENTICATION_E2E_TEST_REPORT.md  FINAL_COMPREHENSIVE_TEST_EXECUTION_SUMMARY.md  FINAL_COMPREHENSIVE_TEST_REPORT.md  FINAL_DEPLOYMENT_VALIDATION_REPORT.md  FINAL_PRODUCTION_READINESS_ASSESSMENT_REPORT.md  FINAL_PRODUCTION_READINESS_REPORT.md  FINAL_PRODUCTION_READINESS_VERIFICATION.md  FINAL_WEEK2_VALIDATION_REPORT.md  FRONTEND_ACTION_PLAN.md  FRONTEND_ARCHITECTURE_REVIEW_REPORT.md  FRONTEND_INTEGRATION_SUMMARY.md  GETTING_STARTED_REAL_FLOWS.md  (+52 more)
event-sourcing/: event-bus-architecture.py
event-system/: event-processor.js  event-publisher.js  package-lock.json
frontend-optimization/: package.optimized.json
go-services/: README.md  consolidate-platform-services.sh  docker-compose.monitoring.yml  docker-compose.phase1.yml  docker-compose.yml
infrastructure/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_RUNBOOK.md  MIGRATION_RUNBOOK.md  Makefile  Makefile.simple  README.md  autoscaling-cost-optimization.tf  ci-cd-pipeline.tf  cost-optimization.tf  database-optimized.tf  database.tf  deploy-production-infrastructure.sh  dr_orchestrator.py  ecs-services.tf  infrastructure-autoscaling.tf  k8s-hybrid-architecture.tf  k8s-iam.tf  kafka-production.tf  main.tf  migration-pipeline.yml  migration-strategy.tf  outputs.tf  (+6 more)
(+1422 files in other folders)
